pretty sure this works

--- a/index.html
+++ b/index.html
@@ -70,14 +70,21 @@
         </div>
         <div class="row battle">
             <div class="player-fighter col-3"></div>
-            <div class="col-6 attack"></div>
+            <div class="col-6">
+                <div class="row buffer">
+                    <div class="col-12"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12 attack"></div>
+                </div>
+                <div class="row btlfdb">
+                    <div class="col-12 battle-feedback"></div>
+                </div>
+            </div>
             <div class="col-3 computer-fighter">
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 battle-feedback">
-            </div>
-        </div>
+        <br><br>
     </div>
 
 
