--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Exo+2" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32" />
     <title>Star Trek: Brawl</title>
 </head>
 
